k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: express-service
spec:
  type: NodePort
  selector:
    app: express-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 30080
    - protocol: TCP
      port: 8081
      targetPort: 3001
      nodePort: 30081
